@@ -38,6 +38,9 @@
 <p>2015-01-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/miff.c (ReadMIFFImage): MIFF needs to stop spinning if
+zlib or bzlib report an error while decompressing.  Solves problem
+with file provided by Jodie Cunningham on 2015-01-25.</li>
 <li>coders/vicar.c (ReadVICARImage): Fix Vicar reader's dogged
 determination to continue reading when there is nothing left to
 read.  Solves problem with file provided by Jodie Cunningham on
